# rs-distributed-compute

./: .gitignore  Cargo.toml  README.md  RS_DISTRIBUTED_COMPUTE.postman_collection.json  configuration.toml  ddl.sql
configs/: manager.toml  worker-1.toml  worker-2.toml  worker-3.toml
manager/: Cargo.toml
manager/src/: main.rs
manager/src/inbound/: http_router.rs
manager/src/model/: health_info.rs  mod.rs  response_health.rs
manager/src/service/: health.rs  mod.rs  t_health.rs
src/: main.rs
src/inbound/: http_router.rs  mod.rs
src/model/: entity_analytics.rs  mod.rs  request_analytics.rs  request_compute.rs  response_analytics.rs  response_compute.rs  response_health.rs
src/outbound/: db_driver.rs  mod.rs
src/service/: algorithm_even_fibonacci_numbers.rs  analytics.rs  concrete_algorithm_even_fib_n.rs  concrete_algorithm_even_fib_sum.rs  concrete_algorithm_primality_seq.rs  factory_algorithm.rs  health.rs  mod.rs  t_algorithm.rs
worker/: Cargo.toml
worker/src/: main.rs
