[package]
name = "rs-distributed-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
config = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
