[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
config = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
mongodb = { version = "3.1.0", features = ["sync"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
